--- a/public/icomoon/style.css
+++ b/public/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?3psxkj');
-  src:  url('fonts/icomoon.eot?3psxkj#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?3psxkj') format('truetype'),
-    url('fonts/icomoon.woff?3psxkj') format('woff'),
-    url('fonts/icomoon.svg?3psxkj#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?8ns1up');
+  src:  url('fonts/icomoon.eot?8ns1up#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?8ns1up') format('truetype'),
+    url('fonts/icomoon.woff?8ns1up') format('woff'),
+    url('fonts/icomoon.svg?8ns1up#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-email:before {
+  content: "\e903";
+}
 .icon-close-solid:before {
   content: "\e902";
 }
