--- a/public/icomoon/style.css
+++ b/public/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nlus2h');
-  src:  url('fonts/icomoon.eot?nlus2h#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nlus2h') format('truetype'),
-    url('fonts/icomoon.woff?nlus2h') format('woff'),
-    url('fonts/icomoon.svg?nlus2h#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?pmvqav');
+  src:  url('fonts/icomoon.eot?pmvqav#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?pmvqav') format('truetype'),
+    url('fonts/icomoon.woff?pmvqav') format('woff'),
+    url('fonts/icomoon.svg?pmvqav#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,8 +25,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-address-book:before {
+  content: "\e90f";
+}
+.icon-phone-book:before {
+  content: "\e90f";
+}
+.icon-contacts:before {
+  content: "\e90f";
+}
 .icon-box:before {
   content: "\e90c";
+}
+.icon-groups:before {
+  content: "\e90e";
+}
+.icon-sign-out1:before {
+  content: "\e90d";
 }
 .icon-app_registration:before {
   content: "\e900";
@@ -162,6 +177,12 @@
 }
 .icon-lock:before {
   content: "\e98f";
+}
+.icon-pie-chart:before {
+  content: "\e99a";
+}
+.icon-stats-dots:before {
+  content: "\e99b";
 }
 .icon-checkmark:before {
   content: "\ea10";
