--- a/public/src/css/wave/button.css
+++ b/public/src/css/wave/button.css
@@ -170,10 +170,10 @@
 }
 .notika-btn-lightblue,
 .btn-lightblue.lightblue-icon-notika {
-    background: #03a9f4;
+    background: #05436b;
 }
 .btn-lightblue.lightblue-icon-notika:hover {
-    background: #03a9f4;
+    background: #05436b;
 }
 .notika-btn-blue {
     background: #2196f3;
