--- a/public/src2/css/accordions.css
+++ b/public/src2/css/accordions.css
@@ -29,7 +29,7 @@
 	line-height:24px;
 }
 .panel-group.adminpro-custon-design .accordion-head a:hover, .panel-group.adminpro-custon-design .accordion-head a:focus, .panel-group.adminpro-custon-design .accordion-head a:active{
-	color:#03a9f4;
+	color:#05436b;
 }
 .panel-group.adminpro-custon-design{
 	margin-bottom:30px;
