--- a/public/src2/style.css
+++ b/public/src2/style.css
@@ -558,15 +558,13 @@ ul.message-menu li .message-content p, ul.notification-menu li .notification-con
 	box-shadow: 0px 2px 3px rgba(0,0,0,.175);
 	padding: 20px;
 }
-.note-heading-indicate {
-    margin-top: 20px;
-}
+
 .note-heading-indicate h2{
 	font-size:20px;
 	color:#fff;
 }
 .note-heading-indicate p{
-	font-size:14px;
+	font-size:16px;
 	color:#fff;
 }
 .menu-setting-wrap.menu-setting-wrap-bg .nav-tabs>li.active>a, .menu-setting-wrap.menu-setting-wrap-bg .nav-tabs>li.active>a:focus, .menu-setting-wrap.menu-setting-wrap-bg .nav-tabs>li.active>a:hover
@@ -577,28 +575,29 @@ ul.message-menu li .message-content p, ul.notification-menu li .notification-con
 	float:left;
 }
 .notes-img img{
-	border-radius:50%;
-	width:60px;
+	border-radius:20%;
+	width:65px;
+	height:65px;
 }
 .notes-list-flow .notes-content {
     margin-left: 80px;
 }
 .notes-list-flow .notes-content p{
-    margin:0px;
+
 	font-size:14px;
-	color:#fff;
+	color:#05436b;
 	line-height:22px;
 }
 .notes-list-flow .notes-content span{
 	font-size:13px;
-	color:#fff;
+	color:#05436b;
 }
-.notes-list-area ul.notes-menu-list li {
+/* .notes-list-area ul.notes-menu-list li {
     margin: 10px 0px;
-}
-.notes-menu-scrollbar, .project-st-menu-scrollbar{
+} */
+/* .notes-menu-scrollbar, .project-st-menu-scrollbar{
 	height:315px;
-}
+} */
 .project-st-list-area ul.projects-st-menu-list li a{
 	color:#303030;
 }
